# concall-tools

./: .gitignore  README.md  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: main.yml
requirements/: requirements-dev.txt  requirements.in  requirements.txt
scripts/: extract_speakers.py  pdf_utils.py  stop_words.py
src/: concall_tools.py
src/concall_tools/: __init__.py  extract_speakers.py
src/speakers/: extraction.py
tests/: test_extract_speakers.py
