[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "0.2.0"
name = "concall-tools"
description = "Tools to extract information from concall transcripts"
readme = "README.md"
authors = [{ name = "Mittal Analytics Pvt Ltd", email = "pratyush@hey.com" }]
license = { file = "LICENSE" }
dependencies = [
    "pymupdf",
    "nltk",
    "numpy",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pip-tools", "flake8", "black", "ipdb", "bumpver", "build", "twine"]

[project.urls]
Homepage = "https://github.com/Mittal-Analytics/concall-tools"

[tool.bumpver]
current_version = "0.2.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

